update : implement 'DataSeer Generic' report template (& fix missing 'return')

--- a/views/root/documents/:id/finish/app.pug
+++ b/views/root/documents/:id/finish/app.pug
@@ -53,6 +53,7 @@
             <select class="custom-select form-select" v-model="gSpreadSheetReportName">
               <option value="AmNat">AmNat</option>
               <option value="ASAP">ASAP</option>
+              <option value="DataSeer Generic">DataSeer Generic</option>
             </select>
             <a target="_blank" :href="gSpreadSheetReportLinks[gSpreadSheetReportName]">
               <button class="btn btn-md btn-primary">Open</button>
