fix : fix attached files bug

--- a/views/root/backoffice/upload/app.pug
+++ b/views/root/backoffice/upload/app.pug
@@ -21,18 +21,18 @@
       </div>
       <div class="row">
         <div class="col">
-          <input id="file" class="form-control" type="file" ref="file" />
+          <input id="file" class="form-control" type="file" ref="file" accept=".pdf, .tei" />
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <label for="attached_files">Upload any additional files (you can select more than one):</label>
+          <label for="attachedFiles">Upload any additional files (you can select more than one):</label>
           <span class="sub">All formats are supported</span>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <input id="attached_files" class="form-control" type="file" ref="attached_files" multiple="true" />
+          <input id="attachedFiles" class="form-control" type="file" ref="attachedFiles" multiple="true" accept=".pdf" />
         </div>
       </div>
       <div class="row">
