update : update datasets model (add URL property) & update ASAP template report

--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -136,9 +136,16 @@ div(id='datasetForm.screen')
         </tr>
         <tr class="custom-row">
           <td colspan="4">
-            <div>Stable URL, DOI, or other link to this object</div>
+            <div>DOI or appropriate citation</div>
             <div key="dataset.DOI" value=""></div>
             <input name="datasetForm.DOI" target="dataset.DOI" value="" type="text" placeholder="https://" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Stable URL or other link to this object</div>
+            <div key="dataset.URL" value=""></div>
+            <input name="datasetForm.URL" target="dataset.URL" value="" type="text" placeholder="https://" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
