update : display all authors from metadata

--- a/views/root/documents/:id/metadata/app.pug
+++ b/views/root/documents/:id/metadata/app.pug
@@ -82,7 +82,7 @@
           <div v-if="item.properties.metadata.authors">
             <label class="property">Authors:</label>
             <ul>
-              <li v-for="author in item.properties.metadata.authors" v-if="author.name">
+              <li v-for="author in item.properties.metadata.authors">
                 <input class="form-control" v-model="author.name" placeholder="Enter the publisher here" />
                 <label v-if="author.email" class="bold">({{ author.email}})</label>
                 <ul>
