update : replace 'datasets' strucutre with new 'dataObjects' structure (see https://www.notion.so/dataseerai/677e8ce634524d1d94b2ff99b14ab7bb?v=fe6a81b9c8e341e48162925fd83e8629&p=6a452a6ffc2842e2aeea4b0c2efdfbc2&pm=c)

--- a/views/root/backoffice/documents/app.pug
+++ b/views/root/backoffice/documents/app.pug
@@ -378,7 +378,7 @@
           <label class="text" v-if="item.properties.status === 'finish'">Process Finished</label>
         </div>
         <div class="col article_title">
-          | {{ item.properties.metadata.article_title }}
+          | {{ item.properties.metadata ? item.properties.metadata.article_title : "" }}
         </div>
         <div class="col text-truncate">
           <select class="custom-select form-select" name="accounts" v-model="item.properties.owner._id">
