update : update DS chart (hide logo params)

--- a/views/charts/asap/pie.pug
+++ b/views/charts/asap/pie.pug
@@ -9,7 +9,7 @@
     link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/charts/asap/pie.css")
   </head>
   <body>
-    img(src=conf.root + "/public/img/cropped-ASAP_Logo_FullColor.png" alt="Aligning Science Across Parkinson's" height="55" width="295")
+    img(id="logo" src=conf.root + "/public/img/cropped-ASAP_Logo_FullColor.png" alt="Aligning Science Across Parkinson's" height="55" width="295")
     div(id="graphic")
     if(document_url)
       label Document URL: #{document_url}
