fix & update : fix & update HHMI reports (see https://www.notion.so/dataseerai/HHMI-Report-Improvements-da638580b59247af9d06a98d9e1751a4?d=e7e5147c547d4bfa9a6ce4ecf551550f)

--- a/views/charts/generic/pie.pug
+++ b/views/charts/generic/pie.pug
@@ -13,7 +13,7 @@
     if(document_url)
       label Document URL: #{document_url}
     if(assessed_at)
-      label Assessed at: #{assessed_at}
+      label(id="date") Assessed at: #{assessed_at}
     if(report_url)
       label Dataseer report: #{report_url}
     <!-- include of global js dependencies -->
